@@ -59,7 +59,7 @@ The program is released under the <b>Open Source</b> Software License 'GNU Gener
 Source code is available at <b>GitHub:</b> <a href="https://github.com/AliView/AliView">https://github.com/AliView/AliView</a>
 </p>
 
-<p><a href="downloads">Download the latest stable version: 1.21 (04/Feb/2018) (Mac OS X, Windows, Linux)</a></p>
+<p><a href="downloads">Download the latest stable version: 1.22 (02/Apr/2018) (Mac OS X, Windows, Linux)</a></p>
 
 <img align="" style="width: 400px;" alt="" src="images/screenshot_mac_400v2.png"><br>
 
@@ -342,10 +342,11 @@ email: anders.larsson [at] icm.uu.se<br>
 
 <h4><a href="#align_menu">Align menu</a></h4>
 
-<h4><a href="#primer_menu">Primer menu</a></h4>
+<h4><a href="#tools_menu">Tools menu</a></h4>
 
-
-
+<ul>
+<li><h4><a href="#primer_menu">Primer submenu</a></h4></li>
+</ul>
 
 <h4><a href="#large_file">Large files indexed</a></h4>
 
@@ -463,6 +464,10 @@ sometimes when you make an analysis. Then you can save the alignment with the
 <p><strong>Delete excluded bases:</strong> Removes sections of the alignment
 that are marked as "Excluded" (Nexus specification). See also above.</p>
 
+<p><strong>Replace terminal GAPs into missing char (?)</strong></p>
+
+<p><strong>Replace missing char (?) into GAP (-)</strong></p>
+
 <p><strong>Find </strong> Finds in name or nucleotides/aminoacids - searches
 across gaps and obeys IUPAC codes.</p>
 
@@ -518,8 +523,9 @@ is saved in the NEXUS Codonpos block)</p>
 belong to <b>majority rule</b> consensus are highlighted by removing background
 colors on deviating characters.</p>
 
+<h2><a name="tools_menu">Tools:</a></h2>
 
-<h2><a name="primer_menu">Primer:</a></h2>
+<h3><a name="primer_menu">Primer:</a></h3>
 
 <p><strong>Find primer in current selection:</strong>
 <br>
